<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gatitos"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>



    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/contacto_nombre"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp"
        android:hint="@string/fecha_nac"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_fecha_nacimiento"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/telefono"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_telefono"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/edit_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_mail"
        android:layout_marginTop="@dimen/espacio_top"
        android:hint="@string/descripcion_contacto"
        android:inputType="text"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_descripcion"
            android:text="@string/texto_boton" />
</RelativeLayout>